--- a/style.css
+++ b/style.css
@@ -1,3 +1,50 @@
+#left {
+    width: 50vw;
+    height: 100vh;
+    left: 0;
+    position: fixed;
+    margin: 10px;
+}
+
+#right {
+    width: 50vw;
+    height: 100vh;
+    right: 0;
+    position: fixed;
+    animation: gradientshift 10s linear alternate infinite;
+}
+
+.intro {
+    font-style: italic;
+    line-height: 4pt;
+    display: inline-block;
+}
+
+.intro:hover {
+    font-style: normal;
+    transform: rotate(-5deg);
+}
+
 body {
-    background-color: coral;
+    margin: 0;
+    padding: 0;
+}
+
+@keyframes gradientshift {
+    from{background: rgb(252,226,0);}
+    to {background: rgb(218,10,51);}
+}
+
+a {
+    text-decoration: none;
+    color: coral;
+}
+
+a:hover {
+    font-style: italic;
+}
+
+ul {
+    list-style-type: disc;
+/*    list-style-image: url(arrow.png);*/
 }
