--- a/flexbox-practice/style.css
+++ b/flexbox-practice/style.css
@@ -2,31 +2,25 @@
     box-sizing: border-box;
 }
 
-body{
-    margin: 0;
+.container {
+    background-color: lightgreen;
+    height: 600px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 30px;
+    padding: 30px;
 }
 
-.content {
-    background-color: orange;
+.item {
+    background-color: beige;
+    height: 60px;
     width: 200px;
-    height: 200px;
-    padding: 30px;
-    border: 10px dashed red;
-    margin: 50px;
-}
-
-.border {
-    background-color: aquamarine;
-    width: 200px;
-    height: 200px;
-    padding: 30px;
-    border: 10px dotted navy;
-    margin: 50px;
-    box-sizing: border-box;
-    position: relative;
-    bottom: 30px;
-    right: 90px;
-    
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .back-to-home {
