update background color on flex-exercise

--- a/flex-exercise/style.css
+++ b/flex-exercise/style.css
@@ -31,7 +31,7 @@ a:hover {
 }
 
 .overall-container {
-    background-color: lightblue;
+    background-color: darkseagreen;
     height: 100vh;
     padding: 0px 10px 10px 10px;
 }
